--- a/.env.example
+++ b/.env.example
@@ -13,11 +13,11 @@ FIREBASE_CLIENT_EMAIL=your-firebase-client-email@example.com
 FIREBASE_DATABASE_URL=https://your-firebase-project.firebaseio.com
 FIREBASE_STORAGE_BUCKET=your-firebase-project.appspot.com
 
-# OpenAI Settings
-OPENAI_API_KEY=your-openai-api-key
-OPENAI_MODEL=gpt-4o
-OPENAI_MAX_TOKENS=1000
-OPENAI_TEMPERATURE=0.7
+# Google Gemini Settings
+GEMINI_API_KEY=your-gemini-api-key
+GEMINI_MODEL=gemini-1.5-flash
+GEMINI_MAX_TOKENS=1000
+GEMINI_TEMPERATURE=0.7
 
 # Google Cloud TTS Settings
 GOOGLE_APPLICATION_CREDENTIALS=path/to/google-credentials.json
