--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 fastapi==0.115.12
 uvicorn[standard]==0.34.3
 firebase-admin==6.8.0
-openai==1.83.0
+google-generativeai==0.8.3
 google-cloud-texttospeech==2.27.0
 python-dotenv==1.1.0
 pydantic==2.11.5
